<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cards Against The Environment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="play_button">Play!</string>
    <string name="add_room_button">Add Room</string>
    <string name="add_player_button">Add Player</string>
    <string name="done_button">Done</string>
    <string name="default_black_card">Card Not Chosen</string>
    <string name="judge_button">Judge</string>
    <string name="choose_button">Choose card</string>
    <string name="play_card_button">Play Card</string>
    <string name="title_activity_launcher">LauncherActivity</string>

    <color name="green">#2ECC71</color>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="title_activity_room_view">RoomViewActivity</string>
    <string name="title_activity_pick_white">PickWhiteActivity</string>

</resources>
