<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/green"
    tools:context=".RoomViewActivity" >

    <Button
	 	android:id="@+id/judge_button"
	   	android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	   	android:layout_alignParentTop="true"
	   	android:layout_centerHorizontal="true"
	   	android:text="@string/judge_button"
	   	android:enabled="false" />
    
    <RelativeLayout
        android:id="@+id/LinearLayoutBlackCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/judge_button"
        android:layout_above="@+id/choose_button"
        android:background="@drawable/background_list" >
        
	   	<TextView
	   	    android:id="@+id/blackCard"
			android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:layout_centerInParent="true"
		    android:layout_margin="15dp"
		    android:padding="15dp"
		    android:textColor="@android:color/white"
		    android:textSize="25sp"
		    android:text="@string/default_black_card"/>
        
    </RelativeLayout>

    <Button
        android:id="@+id/choose_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_button"
        android:onClick="chooseButtonClicked" />

</RelativeLayout>
