<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/green"
    tools:context=".AddRoomActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <EditText
		android:id="@+id/room_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:ems="10" />
    
    <ScrollView 
        android:id="@+id/ScrollView01"
    	android:layout_alignParentTop="true" 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" 
    	android:layout_above="@id/textView1">
    	
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:scrollbarAlwaysDrawVerticalTrack="true">
	        
	        <EditText
		        android:id="@+id/player1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="46dp"
		        android:ems="10" />
	        
	        <Button
		        android:id="@+id/add_player_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/player1"
		        android:layout_centerHorizontal="true"
		        android:text="@string/add_player_button"
		        android:onClick="addPlayer" />
		
		        <requestFocus />
	
	    </RelativeLayout>
	</ScrollView>

	<Button
		android:id="@+id/done_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/ScrollView01"
		android:layout_centerHorizontal="true"
		android:text="@string/done_button"
		android:onClick="addPlayer" />

</RelativeLayout>